Introduce ManifestationModelBuilder and add LastWriteTime for items

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -22,7 +22,10 @@
     "StatusContainer": "wellcomecollection-iiif-presentation",
     "GoFile": "_status/dds.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor.txt",
-    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/"
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
+    "PresentationContainer": "wellcomecollection-iiif-presentation",
+    "TextContainer": "wellcomecollection-iiif-text",
+    "AnnotationContainer": "wellcomecollection-iiif-annotations"
   },
   "Dash": {
     "JobProcessorName": "job-processor-prod",
