--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -53,7 +53,10 @@
     "GoobiCall": "DO NOT CALL",
     "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas",
     "WellcomeCollectionApi": "https://api.wellcomecollection.org",
-    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
