--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -25,7 +25,10 @@
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
     "GoFile": "_status/dds-stage.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-stage.txt",
-    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/"
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations"
   },
   "Dash": {
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
