--- a/src/Wellcome.Dds/WorkflowProcessor/WorkflowProcessor.csproj
+++ b/src/Wellcome.Dds/WorkflowProcessor/WorkflowProcessor.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.1.49" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.5.1.51" />
     <PackageReference Include="CsvHelper" Version="26.0.1" />
     <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.3" />
@@ -38,6 +39,10 @@
     <ProjectReference Include="..\Wellcome.Dds.AssetDomainRepositories\Wellcome.Dds.AssetDomainRepositories.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.Repositories\Wellcome.Dds.Repositories.csproj" />
     <ProjectReference Include="..\Wellcome.Dds\Wellcome.Dds.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Options" />
   </ItemGroup>
 
 </Project>
