Updates after testing dbStatusProvider

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -21,7 +21,8 @@
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "PresentationContainer": "wellcomecollection-iiif-presentation",
     "TextContainer": "wellcomecollection-iiif-text",
-    "AnnotationContainer": "wellcomecollection-iiif-annotations"
+    "AnnotationContainer": "wellcomecollection-iiif-annotations",
+    "MinimumJobAgeMinutes": 10
   },
   "Dash": {
     "JobProcessorName": "job-processor-prod",
