--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -43,6 +43,9 @@
     "PreferCachedStorageMap": false,
     "MaxAgeStorageMap": 180
   },
+  "S3CacheOptions": {
+    "WriteProtobuf": true
+  },
   "AllowedHosts": "*",
   "WorkflowProcessor": {
     "RegisterImages": true,
