--- a/src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj
+++ b/src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.0.1" />
       <PackageReference Include="AWSSDK.S3" Version="3.7.0.13" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+      <PackageReference Include="protobuf-net" Version="3.0.101" />
     </ItemGroup>
 
 </Project>
