Add threadId to logs and use protobug for stage-prod dds.server

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -7,11 +7,6 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      }
-    ],
     "Properties": {
       "Environment": "Staging-Prod"
     }
@@ -36,5 +31,8 @@
       "Container": "wellcomecollection-stage-iiif-storagemaps",
       "Prefix": "stgmap-"
     }
+  },
+  "S3CacheOptions": {
+    "ReadProtobuf": true
   }
 }
