--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -12,12 +12,15 @@
     },
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <{ThreadId}>{NewLine}{Exception}"
+        }
       }
     ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "ApplicationName": "Workflow-Processor",
-      "Environment": "Staging-Prod"
+      "ApplicationName": "Workflow-Processor"
     }
   },
   "Dlcs": {
