Use asyncKeyedLock.LockAsync(key, timeout) in BinaryObjectCache
Also increase ttl of objects in WFProcessor cache

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -43,7 +43,7 @@
     "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
     "StorageMapCache": "",
     "MemoryCacheSeconds": 3600,
-    "PreferCachedStorageMap": false,
+    "PreferCachedStorageMap": true,
     "MaxAgeStorageMap": 180
   },
   "S3CacheOptions": {
@@ -80,7 +80,9 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-storagemaps",
       "Prefix": "stgmap-",
-      "MemoryCacheSeconds": 180
+      "MemoryCacheSeconds": 3600,
+      "CriticalPathTimeout": 10000,
+      "ThrowOnCriticalPathTimeout": true
     },
     "Wellcome.Dds.WordsAndPictures.Text": {
       "AvoidCaching": false,
@@ -88,7 +90,9 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-text",
       "Prefix": "stgtext-",
-      "MemoryCacheSeconds": 180
+      "MemoryCacheSeconds": 3600,
+      "CriticalPathTimeout": 10000,
+      "ThrowOnCriticalPathTimeout": true
     },
     "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
       "AvoidCaching": false,
@@ -96,7 +100,9 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-annotations",
       "Prefix": "stgannos-",
-      "MemoryCacheSeconds": 180
+      "MemoryCacheSeconds": 3600,
+      "CriticalPathTimeout": 10000,
+      "ThrowOnCriticalPathTimeout": true
     }
   }
 }
