Set criticalPathTimeout for dds.server

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -87,7 +87,8 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-text",
       "Prefix": "stgtext-",
-      "MemoryCacheSeconds": 180
+      "MemoryCacheSeconds": 180,
+      "CriticalPathTimeout": 3000
     },
     "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
       "AvoidCaching": false,
@@ -95,7 +96,8 @@
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-annotations",
       "Prefix": "stgannos-",
-      "MemoryCacheSeconds": 180
+      "MemoryCacheSeconds": 180,
+      "CriticalPathTimeout": 3000
     }
   },
   "FeatureManagement": {
