Do not write binary cache in -test wfp

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -39,5 +39,8 @@
       "Container": "wellcomecollection-stage-iiif-annotations",
       "Prefix": "stgannos-"
     }
+  },
+  "S3CacheOptions": {
+    "WriteBinary": false
   }
 }
