Add indexes to db

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -40,5 +40,8 @@
       "Container": "wellcomecollection-iiif-annotations",
       "Prefix": "annos-"
     }
+  },
+  "S3CacheOptions": {
+    "WriteBinary": false
   }
 }
