use protobuf throughout

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
@@ -52,6 +52,10 @@
     "PreferCachedStorageMap": false,
     "MaxAgeStorageMap": 180
   },
+  "S3CacheOptions": {
+    "WriteProtobuf": true,
+    "ReadProtobuf": true
+  },
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "AvoidCaching": false,
