--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -47,7 +47,8 @@
     "MaxAgeStorageMap": 180
   },
   "S3CacheOptions": {
-    "WriteProtobuf": true
+    "WriteProtobuf": true,
+    "ReadProtobuf": true
   },
   "AllowedHosts": "*",
   "WorkflowProcessor": {
