--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -54,6 +54,10 @@
     "PreferCachedStorageMap": false,
     "MaxAgeStorageMap": 180
   },
+  "S3CacheOptions": {
+    "WriteProtobuf": true,
+    "ReadProtobuf": true
+  },
   "Dds": {    
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "AvoidCaching": false,
