Generate canvas labels from AV logical struct DIV, if present

--- a/src/Wellcome.Dds/Wellcome.Dds.Tests/Wellcome.Dds.Tests.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Tests/Wellcome.Dds.Tests.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
+      <ProjectReference Include="..\Wellcome.Dds.Repositories\Wellcome.Dds.Repositories.csproj" />
       <ProjectReference Include="..\Wellcome.Dds\Wellcome.Dds.csproj" />
     </ItemGroup>
 
