--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -44,7 +44,7 @@
     "PatronGetUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
     "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
