--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -23,7 +23,7 @@
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
