--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
@@ -42,7 +42,7 @@
     "PdfQueryType": "sequenceIndex"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
     "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
