--- a/src/Wellcome.Dds/PdfThumbGenerator/appsettings.json
+++ b/src/Wellcome.Dds/PdfThumbGenerator/appsettings.json
@@ -10,7 +10,7 @@
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
     "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
     "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
