--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -29,7 +29,7 @@
     "IIIFServerName": "iiif-builder-stage"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
