--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -24,7 +24,7 @@
     "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
