--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -23,7 +23,7 @@
     "DlcsReturnUrl": "https://iiif-test.wellcomecollection.org/auth/fromcas"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
