--- a/src/AuthTest/AuthTest/appsettings.json
+++ b/src/AuthTest/AuthTest/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "CallbackPath": "/callback"
+  }
 }
