--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Properties/launchSettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:8085",
+      "applicationUrl": "https://localhost:8085",
       "launchUrl": "dash/"
     }
   }
