--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -84,7 +84,7 @@
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "wellcomecloud.onmicrosoft.com",
+    "Domain": "Wellcomecloud.onmicrosoft.com",
     "CallbackPath": "/signin-oidc"
   }
 }
