--- a/Dockerfile-jobprocessor
+++ b/Dockerfile-jobprocessor
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 WORKDIR /src
 
 COPY src/Wellcome.Dds/DlcsJobProcessor/DlcsJobProcessor.csproj DlcsJobProcessor/
@@ -27,7 +27,10 @@ WORKDIR "/src/DlcsJobProcessor"
 RUN dotnet publish "DlcsJobProcessor.csproj" -c Release -o /app/publish
 
 # Runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim
+
+LABEL maintainer="Donald Gray <donald.gray@digirati.com>,Tom Crane <tom.crane@digirati.com>"
+LABEL org.opencontainers.image.source=https://github.com/wellcomecollection/iiif-builder
 
 RUN apt-get update && apt-get install curl -y
 WORKDIR /app
