--- a/src/Wellcome.Dds/Utils.Tests/Utils.Tests.csproj
+++ b/src/Wellcome.Dds/Utils.Tests/Utils.Tests.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Utils\Utils.csproj" />
+    <ProjectReference Include="..\Wellcome.Dds.Repositories\Wellcome.Dds.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
