--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -13,7 +13,8 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "PreventSynchronisation": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
