rearrange config for workflow message SNS and SQS

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -21,7 +21,9 @@
     "PresentationContainer": "wellcomecollection-iiif-presentation",
     "TextContainer": "wellcomecollection-iiif-text",
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
-    "MinimumJobAgeMinutes": 10
+    "MinimumJobAgeMinutes": 10,
+    "WorkflowMessageQueue": "born-digital-notifications-prod",
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
