--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="6.0.3" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.167" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.4.23" />
     <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
@@ -214,12 +215,6 @@
 
   <ItemGroup>
     <Folder Include="Pages" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="AWSSDK.SimpleNotificationService">
-      <HintPath>..\..\..\..\..\..\.nuget\packages\awssdk.simplenotificationservice\3.7.3.74\lib\netcoreapp3.1\AWSSDK.SimpleNotificationService.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
  </Project>
