Add placeholder image cache settings for different envs

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -17,7 +17,8 @@
     "PresentationContainer": "wellcomecollection-iiif-presentation",
     "TextContainer": "wellcomecollection-iiif-text",
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
-    "MinimumJobAgeMinutes": 10
+    "MinimumJobAgeMinutes": 10,
+    "PlaceholderCanvasCacheTimeDays": 28
   },
   "Dash": {
     "JobProcessorName": "job-processor-prod",
