--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -21,7 +21,8 @@
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
-    "IncludeExtraAccessConditionsInManifest": "Missing,Unknown"
+    "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
+    "PlaceholderCanvasCacheTimeDays": 0
   },
   "Dash": {
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
