--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -63,7 +63,8 @@
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
-    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations"
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
+    "PlaceholderCanvasCacheTimeDays": 28
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
