appSettings for Staging-New for all apps

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-New.json
@@ -8,6 +8,7 @@
       }
     },
     "Properties": {
+      "ApplicationName": "Job-Processor",
       "Environment": "Staging-New"
     }
   },
@@ -15,23 +16,10 @@
     "CustomerDefaultSpace": 6,
     "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://newapi.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
-    "PreventSynchronisation": true
+    "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/"
   },
   "Dds": {
-    "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org",
-    "PresentationContainer": "wellcomecollection-stage-new-iiif-presentation",
-    "TextContainer": "wellcomecollection-stage-new-iiif-text",
-    "AnnotationContainer": "wellcomecollection-stage-new-iiif-annotations",
-    "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
-    "PlaceholderCanvasCacheTimeDays": 0
-  },
-  "Dash": {
-    "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
-    "JobProcessorName": "job-processor-stage-new",
-    "WorkflowProcessorName": "workflow-processor-stage-new",
-    "DashboardName": "dashboard-stage-new",
-    "IIIFServerName": "iiif-builder-stage-new"
+    "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
