--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
@@ -17,7 +17,7 @@
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
   },
   "Dds": {
-    "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
+    "LinkedDataDomain": "https://iiif-test.wellcomecollection.org"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
