--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
@@ -8,6 +8,7 @@
       }
     },
     "Properties": {
+      "ApplicationName": "Workflow-Processor",
       "Environment": "Staging-New"
     }
   },
@@ -15,23 +16,15 @@
     "CustomerDefaultSpace": 6,
     "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://newapi.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
-    "PreventSynchronisation": true
+    "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org",
     "PresentationContainer": "wellcomecollection-stage-new-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-new-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-new-iiif-annotations",
-    "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
-    "PlaceholderCanvasCacheTimeDays": 0
-  },
-  "Dash": {
-    "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
-    "JobProcessorName": "job-processor-stage-new",
-    "WorkflowProcessorName": "workflow-processor-stage-new",
-    "DashboardName": "dashboard-stage-new",
-    "IIIFServerName": "iiif-builder-stage-new"
+    "WorkflowMessageQueue": "born-digital-notifications-staging",
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
@@ -41,6 +34,17 @@
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
       "Container": "wellcomecollection-stage-new-iiif-storagemaps",
       "Prefix": "stgmap-"
+    },
+    "Wellcome.Dds.WordsAndPictures.Text": {
+      "Container": "wellcomecollection-stage-new-iiif-text",
+      "Prefix": "stgtext-"
+    },
+    "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
+      "Container": "wellcomecollection-stage-new-iiif-annotations",
+      "Prefix": "stgannos-"
     }
+  },
+  "S3CacheOptions": {
+    "WriteBinary": false
   }
 }
