--- a/src/Wellcome.Dds/PdfThumbGenerator/PdfThumbGenerator.csproj
+++ b/src/Wellcome.Dds/PdfThumbGenerator/PdfThumbGenerator.csproj
@@ -5,7 +5,15 @@
         <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
-    <ItemGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
+     <ItemGroup>
       <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.167" />
       <PackageReference Include="CsvHelper" Version="27.2.1" />
       <PackageReference Include="GhostScript.NetCore" Version="1.0.1" />
