--- a/src/Wellcome.Dds/CatalogueClient/CatalogueClient.csproj
+++ b/src/Wellcome.Dds/CatalogueClient/CatalogueClient.csproj
@@ -6,6 +6,14 @@
         <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="ShellProgressBar" Version="5.2.0" />
       <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
