--- a/src/Wellcome.Dds/Wellcome.Dds.Common/Wellcome.Dds.Common.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Common/Wellcome.Dds.Common.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latestmajor</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
