--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-New.json
@@ -16,7 +16,8 @@
     "CustomerDefaultSpace": 6,
     "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://newapi.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage-new.wellcomecollection.org"
