--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
@@ -16,6 +16,7 @@
     "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://newapi.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
     "PreventSynchronisation": true
   },
   "Dds": {
