--- a/src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories/Wellcome.Dds.AssetDomainRepositories.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories/Wellcome.Dds.AssetDomainRepositories.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\Wellcome.Dds\Wellcome.Dds.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="AWSSDK.SimpleNotificationService">
+      <HintPath>..\..\..\..\..\..\.nuget\packages\awssdk.simplenotificationservice\3.7.3.74\lib\netcoreapp3.1\AWSSDK.SimpleNotificationService.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
