--- a/src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories/Wellcome.Dds.AssetDomainRepositories.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories/Wellcome.Dds.AssetDomainRepositories.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.9.18" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.101.14" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.6" />
@@ -20,12 +21,6 @@
     <ProjectReference Include="..\Wellcome.Dds.AssetDomain\Wellcome.Dds.AssetDomain.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
     <ProjectReference Include="..\Wellcome.Dds\Wellcome.Dds.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="AWSSDK.SimpleNotificationService">
-      <HintPath>..\..\..\..\..\..\.nuget\packages\awssdk.simplenotificationservice\3.7.3.74\lib\netcoreapp3.1\AWSSDK.SimpleNotificationService.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
