Listen to multiple workflow queues

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -22,7 +22,10 @@
     "TextContainer": "wellcomecollection-iiif-text",
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "MinimumJobAgeMinutes": 10,
-    "WorkflowMessageQueue": "born-digital-notifications-prod",
+    "WorkflowMessageQueues": [
+      "born-digital-notifications-prod",
+      "digitised-notifications-prod"
+    ],
     "WorkflowMessagePoll": false
   },
   "Storage": {
