--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-New.json
@@ -24,7 +24,10 @@
     "PresentationContainer": "wellcomecollection-stage-new-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-new-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-new-iiif-annotations",
-    "WorkflowMessageQueue": "born-digital-notifications-staging",
+    "WorkflowMessageQueues": [
+      "born-digital-notifications-staging-new",
+      "digitised-notifications-staging-new"
+    ],
     "WorkflowMessagePoll": false
   },
   "Storage": {
