--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -21,7 +21,10 @@
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
-    "WorkflowMessageQueue": "born-digital-notifications-staging",
+    "WorkflowMessageQueues": [
+      "born-digital-notifications-staging",
+      "digitised-notifications-staging"
+    ],
     "WorkflowMessagePoll": false
   },
   "Storage": {
