Staging-prod appSettings

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -12,15 +12,22 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 7,
+    "CustomerDefaultSpace": 9,
+    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "SingleAssetManifestTemplate": "https://neworchestrator.dlcs.io/iiif-manifest/wellcome/{0}/{1}",
+    "ApiEntryPoint": "https://newapi.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "PreventSynchronisation": true
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "PreventSynchronisation": false,
+    "PortalPageTemplate": "https://portal.dlcs.digirati.io/images/{0}/{1}",
+    "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
-    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
-    "TextContainer": "wellcomecollection-stage-iiif-text",
-    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
+    "PresentationContainer": "wellcomecollection-test-iiif-presentation",
+    "TextContainer": "wellcomecollection-test-iiif-text",
+    "AnnotationContainer": "wellcomecollection-test-iiif-annotations",
     "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
     "PlaceholderCanvasCacheTimeDays": 0,
     "DashboardPushBornDigitalQueue": "born-digital-notifications-staging-prod",
@@ -39,7 +46,7 @@
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Container": "wellcomecollection-test-iiif-storagemaps",
       "Prefix": "stgmap-"
     }
   }
