--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -13,8 +13,12 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 7,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "CustomerDefaultSpace": 9,
+    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "ApiEntryPoint": "https://newapi.dlcs.io/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
@@ -26,7 +30,7 @@
       "born-digital-notifications-staging-prod",
       "digitised-notifications-staging-prod"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": true
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
@@ -34,15 +38,15 @@
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Container": "wellcomecollection-test-iiif-storagemaps",
       "Prefix": "stgmap-"
     },
     "Wellcome.Dds.WordsAndPictures.Text": {
-      "Container": "wellcomecollection-stage-iiif-text",
+      "Container": "wellcomecollection-test-iiif-text",
       "Prefix": "stgtext-"
     },
     "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
-      "Container": "wellcomecollection-stage-iiif-annotations",
+      "Container": "wellcomecollection-test-iiif-annotations",
       "Prefix": "stgannos-"
     }
   },
