--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
@@ -13,8 +13,12 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 7,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "CustomerDefaultSpace": 9,
+    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "ApiEntryPoint": "https://newapi.dlcs.io/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org"
@@ -25,7 +29,7 @@
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Container": "wellcomecollection-test-iiif-storagemaps",
       "Prefix": "stgmap-"
     }
   }
