--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -12,14 +12,18 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 7,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "CustomerDefaultSpace": 9,
+    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "ApiEntryPoint": "https://newapi.dlcs.io/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
-    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
-    "TextContainer": "wellcomecollection-stage-iiif-text",
-    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
+    "PresentationContainer": "wellcomecollection-test-iiif-presentation",
+    "TextContainer": "wellcomecollection-test-iiif-text",
+    "AnnotationContainer": "wellcomecollection-test-iiif-annotations",
     "DlcsReturnUrl": "https://iiif-test.wellcomecollection.org/auth/fromcas"
   },
   "Storage": {
@@ -28,7 +32,7 @@
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Container": "wellcomecollection-test-iiif-storagemaps",
       "Prefix": "stgmap-"
     }
   },
