Update appSettings for prod protagonist

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
@@ -14,10 +14,11 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 5,
-    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
-    "LinkedDataDomain": "https://iiif.wellcomecollection.org",
+    "LinkedDataDomain": "https://iiif.wellcomecollection.org"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
