--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -12,6 +12,11 @@
       "Environment": "Production"
     }
   },
+  "Dlcs": {
+    "CustomerDefaultSpace": 5,
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
+  },
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "PresentationContainer": "wellcomecollection-iiif-presentation",
@@ -27,10 +32,6 @@
     "WorkflowProcessorName": "workflow-processor-prod",
     "DashboardName": "dashboard-prod",
     "IIIFServerName": "iiif-builder-prod"
-  },
-  "Dlcs": {
-    "CustomerDefaultSpace": 5,
-    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
