--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -31,6 +31,7 @@
     "SingleAssetManifestTemplate": "https://dlcs.io/iiif-manifest/wellcome/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "InternalResourceEntryPoint": "https://orchestrator.dlcs.io/",
     "BatchSize": 100,
     "PreventSynchronisation": false,
     "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
