--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -12,6 +12,11 @@
       "Environment": "Production"
     }
   },
+  "Dlcs": {
+    "CustomerDefaultSpace": 5,
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
+  },
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "PresentationContainer": "wellcomecollection-iiif-presentation",
@@ -19,10 +24,7 @@
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas"
   },
-  "Dlcs": {
-    "CustomerDefaultSpace": 5,
-    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
-  },
+
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
     "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
