--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -14,7 +14,8 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 5,
-    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
@@ -26,11 +27,11 @@
       "born-digital-notifications-prod",
       "digitised-notifications-prod"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": true
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
-    "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
+    "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
