--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -29,7 +29,8 @@
     "CustomerDefaultSpace": 6,
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",    
+    "InternalResourceEntryPoint": "https://orchestrator.dlcs.io/",
     "BatchSize": 100,
     "PreventSynchronisation": false,
     "PdfQueryName": "pdf-item",
