no -prod suffixes on wfp queues

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -24,8 +24,8 @@
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "MinimumJobAgeMinutes": 10,
     "WorkflowMessageListenQueues": [
-      "born-digital-notifications-prod",
-      "digitised-notifications-prod"
+      "born-digital-notifications",
+      "digitised-notifications"
     ],
     "WorkflowMessagePoll": true
   },
