no -prod suffixes on wfp queues

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -24,8 +24,8 @@
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "MinimumJobAgeMinutes": 10,
     "PlaceholderCanvasCacheTimeDays": 28,
-    "DashboardPushBornDigitalQueue": "born-digital-notifications-prod",
-    "DashboardPushDigitisedQueue": "digitised-notifications-prod"
+    "DashboardPushBornDigitalQueue": "born-digital-notifications",
+    "DashboardPushDigitisedQueue": "digitised-notifications"
   },
   "Dash": {
     "JobProcessorName": "job-processor-prod",
