use dlcs.io for stage-new

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-New.json
@@ -13,11 +13,11 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-    "SingleAssetManifestTemplate": "https://neworchestrator.dlcs.io/iiif-manifest/wellcome/{0}/{1}",
-    "ApiEntryPoint": "https://newapi.dlcs.io/",
+    "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "SingleAssetManifestTemplate": "https://dlcs.io/iiif-manifest/wellcome/{0}/{1}",
+    "ApiEntryPoint": "https://dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "InternalResourceEntryPoint": "https://dlcs.io/",
     "PreventSynchronisation": false,
     "PortalPageTemplate": "https://portal.dlcs.digirati.io/images/{0}/{1}",
     "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}",
