--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-New.json
@@ -13,10 +13,10 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-    "ApiEntryPoint": "https://newapi.dlcs.io/",
+    "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "ApiEntryPoint": "https://dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
+    "InternalResourceEntryPoint": "https://dlcs.io/",
     "SupportsDeliveryChannels": true
   },
   "Dds": {
