fix mistake in stage-new config

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-New.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-New.json
@@ -14,7 +14,7 @@
   "Dlcs": {
     "CustomerDefaultSpace": 6,
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-    "ApiEntryPoint": "https://dlcs.io/",
+    "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-stage-new.wellcomecollection.org/",
     "InternalResourceEntryPoint": "https://dlcs.io/",
     "SupportsDeliveryChannels": true
