adjust old stage appSettings for protagonist

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
@@ -14,10 +14,11 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
-    "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
+    "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
