--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -13,16 +13,15 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "PreventSynchronisation": true
+    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
+    "PreventSynchronisation": false,
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
     "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
     "TextContainer": "wellcomecollection-stage-iiif-text",
     "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
-    "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
-    "PlaceholderCanvasCacheTimeDays": 0,
     "DashboardPushBornDigitalQueue": "born-digital-notifications-staging-dds",
     "DashboardPushDigitisedQueue": "digitised-notifications-staging-dds"
   },
