--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging.json
@@ -13,7 +13,8 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
@@ -39,5 +40,8 @@
       "Container": "wellcomecollection-stage-iiif-annotations",
       "Prefix": "stgannos-"
     }
+  },
+  "S3CacheOptions": {
+    "ReadProtobuf": true
   }
 }
