--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -14,7 +14,8 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
+    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
+    "SupportsDeliveryChannels": true
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
@@ -26,7 +27,7 @@
       "born-digital-notifications-staging-dds",
       "digitised-notifications-staging-dds"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": true
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/{0}/{1}",
@@ -45,5 +46,8 @@
       "Container": "wellcomecollection-stage-iiif-annotations",
       "Prefix": "stgannos-"
     }
+  },
+  "S3CacheOptions": {
+    "WriteBinary": false
   }
 }
