Add logging to presentation controller

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -30,7 +30,7 @@
       "born-digital-notifications-staging-prod",
       "digitised-notifications-staging-prod"
     ],
-    "WorkflowMessagePoll": true
+    "WorkflowMessagePoll": false
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
