--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
@@ -14,8 +14,7 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
-    "SupportsDeliveryChannels": true
+    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org"
