--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -14,8 +14,7 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 5,
-    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/",
-    "SupportsDeliveryChannels": true
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
