--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -21,8 +21,7 @@
     "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
     "PreventSynchronisation": false,
     "PortalPageTemplate": "https://portal.dlcs.digirati.io/images/{0}/{1}",
-    "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}",
-    "SupportsDeliveryChannels": true
+    "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
