--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -14,8 +14,7 @@
   "Dlcs": {
     "CustomerDefaultSpace": 6,
     "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
-    "PreventSynchronisation": false,
-    "SupportsDeliveryChannels": true
+    "PreventSynchronisation": false
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
