--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -16,8 +16,7 @@
     "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
-    "SupportsDeliveryChannels": true
+    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
