--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging.json
@@ -13,8 +13,7 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 6,
-    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/",
-    "SupportsDeliveryChannels": true
+    "ResourceEntryPoint": "https://iiif-stage.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
