staging-prod appsettings

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -14,22 +14,13 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 9,
-    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-    "SingleAssetManifestTemplate": "https://neworchestrator.dlcs.io/iiif-manifest/wellcome/{0}/{1}",
-    "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/",
-    "PreventSynchronisation": false,
-    "PortalPageTemplate": "https://portal.dlcs.digirati.io/images/{0}/{1}",
-    "PortalBatchTemplate": "https://portal.dlcs.digirati.io/batches/{0}"
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
     "PresentationContainer": "wellcomecollection-test-iiif-presentation",
     "TextContainer": "wellcomecollection-test-iiif-text",
     "AnnotationContainer": "wellcomecollection-test-iiif-annotations",
-    "IncludeExtraAccessConditionsInManifest": "Missing,Unknown",
-    "PlaceholderCanvasCacheTimeDays": 0,
     "DashboardPushBornDigitalQueue": "born-digital-notifications-staging-prod",
     "DashboardPushDigitisedQueue": "digitised-notifications-staging-prod"
   },
