--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -13,10 +13,7 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 9,
-    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-    "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/"
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
