--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -14,10 +14,7 @@
   },
   "Dlcs": {
     "CustomerDefaultSpace": 9,
-    "SkeletonNamedQueryTemplate": "https://neworchestrator.dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-    "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
-    "InternalResourceEntryPoint": "https://neworchestrator.dlcs.io/"
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
@@ -29,7 +26,7 @@
       "born-digital-notifications-staging-prod",
       "digitised-notifications-staging-prod"
     ],
-    "WorkflowMessagePoll": false
+    "WorkflowMessagePoll": true
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/{0}/{1}",
