disable dymanic collections

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -21,7 +21,8 @@
     "PresentationContainer": "wellcomecollection-iiif-presentation",
     "TextContainer": "wellcomecollection-iiif-text",
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
-    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas"
+    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas",
+    "DynamicCollectionsEnabled": false
   },
 
   "Storage": {
