before IMetsResource.Identifier becomes string

--- a/src/Wellcome.Dds/Test.Helpers/Test.Helpers.csproj
+++ b/src/Wellcome.Dds/Test.Helpers/Test.Helpers.csproj
@@ -5,4 +5,8 @@
         <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
+    </ItemGroup>
+
 </Project>
