--- a/src/Wellcome.Dds/Wellcome.Dds.Repositories.Tests/Wellcome.Dds.Repositories.Tests.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Repositories.Tests/Wellcome.Dds.Repositories.Tests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Test.Helpers\Test.Helpers.csproj" />
       <ProjectReference Include="..\Wellcome.Dds.Repositories\Wellcome.Dds.Repositories.csproj" />
     </ItemGroup>
 
